
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/query_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">
    <!--android:background="#fffff7ee"-->
    <!--android:background="@color/primary_dark_material_light"-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity$PlaceholderFragment">


    <TextView
        android:id="@+id/q1"
        android:text="@string/query_1"
        style="@style/QuestionDesign"
        android:textColor="#ff1976d2" />
    <MultiAutoCompleteTextView
        android:id="@+id/response_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/q1"
        android:inputType="textMultiLine"
        android:layout_marginTop="20dp"
        android:textColor="#ff0c0406" />

    <TextView
        android:id="@+id/q2"
        android:text="@string/query_2"
        style="@style/QuestionDesign"
        android:layout_below="@id/response_1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="#ff1976d2" />
    <RatingBar

        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/ratingBarStyle"
        android:layout_below="@id/q2"
        android:numStars="5"
        android:stepSize="0.5"
        android:rating="1.0"
        android:layout_marginBottom="20dp"/>

    <TextView
    android:id="@+id/q3"
    android:text="@string/query_3"
    style="@style/QuestionDesign"
    android:layout_below="@id/rating"
        android:textColor="#ff1976d2" />
    <MultiAutoCompleteTextView
        android:id="@+id/response_3"
        android:hint="Separate entries by comma.Ex. I, U"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/q3"
        android:inputType="textMultiLine"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/q4"
        style="@style/QuestionDesign"
        android:text="@string/query_4"
        android:layout_below="@id/response_3"
        android:textColor="#ff1976d2" />
    <MultiAutoCompleteTextView
        android:id="@+id/response_4"
        android:hint="Separate entries by comma. Ex. I,U"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/q4"
        android:inputType="textMultiLine"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/q5"
        style="@style/QuestionDesign"
        android:text="@string/query_5"
        android:layout_below="@id/response_4"
        android:textColor="#ff1976d2" />
    <MultiAutoCompleteTextView
        android:id="@+id/response_5"
        android:hint="Separate entries by comma. Ex. I,U"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/q5"
        android:inputType="textMultiLine"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_below="@id/response_5">

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/b_datepicker"
            android:background="@drawable/ic_calendar"
            android:clickable="true"
            android:onClick="onDatePickerButtonClicked"/>
            <!--android:background="#ff7174ff" />-->
        <!--android:layout_below="@id/response_5" -->
        <TextView
            android:id="@+id/date_text"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:layout_marginTop="12dp"
            android:textSize="15sp"
            android:textColor="#ff1976d2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/b_submit"
            android:text="Memorize"
            android:clickable="true"
            android:onClick="onMemorizeButtonClicked"
            android:background="#ff1976d2"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <!--android:layout_below="@id/response_5" -->

        <!--<ImageButton-->
            <!--android:id="@+id/add_button"-->
            <!--android:layout_width="48dp"-->
            <!--android:layout_height="48dp"-->
            <!--android:layout_gravity="end|bottom"-->
            <!--android:layout_marginBottom="16dp"-->
            <!--android:layout_marginEnd="16dp"-->
            <!--android:layout_marginRight="16dp"-->
            <!--android:src="@android:drawable/ic_input_add"/>-->

    </RelativeLayout>

</RelativeLayout>

</ScrollView>